--- a/index.html
+++ b/index.html
@@ -13,7 +13,11 @@
     </header>
     <main>
         <h2>Make Your Selection</h2>
-        <h3>Score</h3>
+        <div>
+            <input type="button" value="Rock"></input>
+            <input type="button" value="Paper"></input>
+            <input type="button" value="Scissors"></input>
+        </div>
     </main>
 </body>
 </html>
