moved squigly bracket to bottom of playGame function

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <input type="button" value="Paper"></input>
             <input type="button" value="Scissors"></input>
         </div>
+        <div id="roundWinner"></div>
     </main>
 </body>
 </html>
